Set applicationId to match app_package.

--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -80,6 +80,7 @@ android {
 		targetSdkVersion 22
 		versionCode 15
 		versionName "0.15"
+		applicationId "org.briarproject.briar.beta"
 		resValue "string", "app_package", "org.briarproject.briar.beta"
 		buildConfigField "String", "GitHash", "\"${getGitHash()}\""
 	}
