--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -82,6 +82,7 @@ android {
 		versionName "0.16.8"
 		applicationId "org.briarproject.briar.beta"
 		resValue "string", "app_package", "org.briarproject.briar.beta"
+		resValue "string", "app_name", "Briar Beta"
 		buildConfigField "String", "GitHash", "\"${getGitHash()}\""
 	}
 
@@ -89,6 +90,7 @@ android {
 		debug {
 			applicationIdSuffix ".debug"
 			resValue "string", "app_package", "org.briarproject.briar.beta.debug"
+			resValue "string", "app_name", "Briar Debug"
 			shrinkResources false
 			minifyEnabled true
 			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
