Disable PNG crunching for reproducibility
This can help to prevent non-determinism introduced by the crunching
process.

More information:
https://gitlab.com/fdroid/fdroid-website/commit/e48f9f0773568d92ff764ad3cc79eed0ae2c497e

With enabled and disabled crunching,
the size of the signed release APK was 17809681 bytes.

Related to #164

--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -107,6 +107,10 @@ android {
 		targetCompatibility JavaVersion.VERSION_1_7
 	}
 
+	aaptOptions {
+		cruncherEnabled = false
+	}
+
 	lintOptions {
 		warning 'MissingTranslation'
 		warning 'ImpliedQuantity'
