--- a/briar-android/.tx/config
+++ b/briar-android/.tx/config
@@ -1,6 +1,6 @@
 [main]
 host = https://www.transifex.com
-lang_map = pt_BR: pt-rBR, fr_FR: fr, nb_NO: nb
+lang_map = pt_BR: pt-rBR, fr_FR: fr, nb_NO: nb, zh-Hans: zh-rCN
 
 [briar.stringsxml-5]
 file_filter = src/main/res/values-<lang>/strings.xml
