Clear notifications when dismissed.
Also fixed an issue with notifications alerting again when items
were removed.

--- a/briar-android/src/main/AndroidManifest.xml
+++ b/briar-android/src/main/AndroidManifest.xml
@@ -32,6 +32,11 @@
 			</intent-filter>
 		</service>
 
+		<service
+			android:name="org.briarproject.briar.android.NotificationCleanupService"
+			android:exported="false">
+		</service>
+
 		<activity
 			android:name="org.briarproject.briar.android.reporting.DevReportActivity"
 			android:excludeFromRecents="true"
