--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,7 @@ cache:
 
 before_script:
   - export GRADLE_USER_HOME=$PWD/.gradle
-#  - export ANDROID_COMPILE_SDK=`sed -n 's,.*compileSdkVersion\s*\([0-9][0-9]*\).*,\1,p' app/build.gradle`
-#  - echo y | android --silent update sdk --no-ui --filter android-${ANDROID_COMPILE_SDK}
+  - echo y | /opt/android-sdk/tools/bin/sdkmanager "build-tools;23.0.3"
 
 test:
   script:
