--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,7 @@ allprojects {
 	repositories {
 		jcenter()
 		mavenLocal()
-		maven {
-			url 'https://maven.google.com'
-		}
+		google()
 	}
 }
 
@@ -14,10 +12,10 @@ buildscript {
 	repositories {
 		jcenter()
 		mavenLocal()
-		maven {
-			url "https://plugins.gradle.org/m2/"
-		}
 		google()
+		maven {
+			url 'https://plugins.gradle.org/m2/'
+		}
 	}
 
 	dependencies {
