--- a/bramble-j2se/build.gradle
+++ b/bramble-j2se/build.gradle
@@ -5,7 +5,7 @@ targetCompatibility = 1.7
 apply plugin: 'witness'
 
 dependencies {
-	compile project(':bramble-core')
+	compile project(path: ':bramble-core', configuration: 'default')
 	compile fileTree(dir: 'libs', include: '*.jar')
 	compile 'net.java.dev.jna:jna:4.4.0'
 	compile 'net.java.dev.jna:jna-platform:4.4.0'
