--- a/bramble-android/build.gradle
+++ b/bramble-android/build.gradle
@@ -26,6 +26,9 @@ android {
 dependencies {
 	compile project(path: ':bramble-core', configuration: 'default')
 	compile fileTree(dir: 'libs', include: '*.jar')
+
+	annotationProcessor 'com.google.dagger:dagger-compiler:2.0.2'
+
 	provided 'javax.annotation:jsr250-api:1.0'
 }
 
