--- a/bramble-core/build.gradle
+++ b/bramble-core/build.gradle
@@ -1,12 +1,9 @@
-plugins {
-	id 'java'
-	id 'net.ltgt.apt' version '0.9'
-	id 'idea'
-}
-
+apply plugin: 'java'
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
 
+apply plugin: 'net.ltgt.apt'
+apply plugin: 'idea'
 apply plugin: 'witness'
 
 dependencies {
@@ -15,7 +12,11 @@ dependencies {
 	compile 'com.h2database:h2:1.4.192' // This is the last version that supports Java 1.6
 	compile 'org.bitlet:weupnp:0.1.4'
 
+	apt 'com.google.dagger:dagger-compiler:2.0.2'
+
 	testCompile project(path: ':bramble-api', configuration: 'testOutput')
+
+	testApt 'com.google.dagger:dagger-compiler:2.0.2'
 }
 
 dependencyVerification {
