--- a/bramble-j2se/build.gradle
+++ b/bramble-j2se/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'java'
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
+apply plugin: 'net.ltgt.apt'
+apply plugin: 'idea'
 apply plugin: 'witness'
 
 dependencies {
@@ -9,6 +11,8 @@ dependencies {
 	compile fileTree(dir: 'libs', include: '*.jar')
 	compile 'net.java.dev.jna:jna:4.4.0'
 	compile 'net.java.dev.jna:jna-platform:4.4.0'
+
+	apt 'com.google.dagger:dagger-compiler:2.0.2'
 
 	testCompile project(path: ':bramble-core', configuration: 'testOutput')
 }
