--- a/build.gradle
+++ b/build.gradle
@@ -14,10 +14,11 @@ buildscript {
 		maven {
 			url "https://plugins.gradle.org/m2/"
 		}
+		google()
 	}
 
 	dependencies {
-		classpath 'com.android.tools.build:gradle:2.3.3'
+		classpath 'com.android.tools.build:gradle:3.0.0'
 		classpath 'net.ltgt.gradle:gradle-apt-plugin:0.9'
 		classpath 'de.undercouch:gradle-download-task:3.2.0'
 		classpath files('libs/gradle-witness.jar')
