--- a/briar-core/build.gradle
+++ b/briar-core/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'java'
-sourceCompatibility = 1.6
-targetCompatibility = 1.6
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 apply plugin: 'net.ltgt.apt'
 apply plugin: 'idea'
@@ -32,4 +32,14 @@ dependencyVerification {
 			'org.slf4j:slf4j-api:e56288031f5e60652c06e7bb6e9fa410a61231ab54890f7b708fc6adc4107c5b',
 			'com.squareup.okio:okio:734269c3ebc5090e3b23566db558f421f0b4027277c79ad5d176b8ec168bb850',
 	]
+}
+
+// If a Java 6 JRE is available, check we're not using any Java 7 or 8 APIs
+tasks.withType(JavaCompile) {
+	doFirst {
+		def home = System.env.JAVA_6_HOME;
+		if (home != null && !home.isEmpty()) {
+			options.bootstrapClasspath = files("${home}/jre/lib/rt.jar", "${home}/jre/lib/jsse.jar")
+		}
+	}
 }
