Include java.lang.invoke classes in bootstrap classpath.

--- a/briar-core/build.gradle
+++ b/briar-core/build.gradle
@@ -36,10 +36,5 @@ dependencyVerification {
 
 // If a Java 6 JRE is available, check we're not using any Java 7 or 8 APIs
 tasks.withType(JavaCompile) {
-	doFirst {
-		def home = System.env.JAVA_6_HOME;
-		if (home != null && !home.isEmpty()) {
-			options.bootstrapClasspath = files("${home}/jre/lib/rt.jar", "${home}/jre/lib/jsse.jar")
-		}
-	}
+	useJava6StandardLibrary(it)
 }
