--- a/bramble-android/build.gradle
+++ b/bramble-android/build.gradle
@@ -24,12 +24,12 @@ android {
 }
 
 dependencies {
-	compile project(path: ':bramble-core', configuration: 'default')
-	compile fileTree(dir: 'libs', include: '*.jar')
+	implementation project(path: ':bramble-core', configuration: 'default')
+	implementation fileTree(dir: 'libs', include: '*.jar')
 
 	annotationProcessor 'com.google.dagger:dagger-compiler:2.0.2'
 
-	provided 'javax.annotation:jsr250-api:1.0'
+	compileOnly 'javax.annotation:jsr250-api:1.0'
 }
 
 dependencyVerification {
