--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -2,45 +2,45 @@ apply plugin: 'com.android.application'
 apply plugin: 'witness'
 
 dependencies {
-	compile project(path: ':briar-core', configuration: 'default')
-	compile project(path: ':bramble-core', configuration: 'default')
-	compile project(path: ':bramble-android', configuration: 'default')
+	implementation project(path: ':briar-core', configuration: 'default')
+	implementation project(path: ':bramble-core', configuration: 'default')
+	implementation project(path: ':bramble-android', configuration: 'default')
 
 	def supportVersion = '23.2.1'
-	compile "com.android.support:support-v4:$supportVersion"
-	compile("com.android.support:appcompat-v7:$supportVersion") {
+	implementation "com.android.support:support-v4:$supportVersion"
+	implementation("com.android.support:appcompat-v7:$supportVersion") {
 		exclude module: 'support-v4'
 	}
-	compile("com.android.support:preference-v14:$supportVersion") {
+	implementation("com.android.support:preference-v14:$supportVersion") {
 		exclude module: 'support-v4'
 	}
-	compile("com.android.support:design:$supportVersion") {
+	implementation("com.android.support:design:$supportVersion") {
 		exclude module: 'support-v4'
 		exclude module: 'recyclerview-v7'
 	}
-	compile "com.android.support:cardview-v7:$supportVersion"
-	compile "com.android.support:support-annotations:$supportVersion"
-	compile 'com.android.support.constraint:constraint-layout:1.0.2'
-	compile('ch.acra:acra:4.8.5') {
+	implementation "com.android.support:cardview-v7:$supportVersion"
+	implementation "com.android.support:support-annotations:$supportVersion"
+	implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
+	implementation('ch.acra:acra:4.8.5') {
 		exclude module: 'support-v4'
 		exclude module: 'support-annotations'
 	}
-
-	compile 'info.guardianproject.panic:panic:0.5'
-	compile 'info.guardianproject.trustedintents:trustedintents:0.2'
-	compile 'de.hdodenhof:circleimageview:2.1.0'
-	compile 'com.google.zxing:core:3.3.0'
-	compile 'com.jpardogo.materialtabstrip:library:1.1.0'
-	compile 'com.github.bumptech.glide:glide:3.8.0'
-	compile 'uk.co.samuelwall:material-tap-target-prompt:1.9.2'
+	implementation 'info.guardianproject.panic:panic:0.5'
+	implementation 'info.guardianproject.trustedintents:trustedintents:0.2'
+	implementation 'de.hdodenhof:circleimageview:2.1.0'
+	implementation 'com.google.zxing:core:3.3.0'
+	implementation 'com.jpardogo.materialtabstrip:library:1.1.0'
+	implementation 'com.github.bumptech.glide:glide:3.8.0'
+	implementation 'uk.co.samuelwall:material-tap-target-prompt:1.9.2'
 
 	annotationProcessor 'com.google.dagger:dagger-compiler:2.0.2'
 
-	provided 'javax.annotation:jsr250-api:1.0'
+	compileOnly 'javax.annotation:jsr250-api:1.0'
 
-	testCompile project(path: ':bramble-core', configuration: 'testOutput')
-	testCompile 'org.robolectric:robolectric:3.5.1'
-	testCompile 'org.robolectric:shadows-support-v4:3.0'
+	testImplementation project(path: ':bramble-core', configuration: 'testOutput')
+	testImplementation 'org.robolectric:robolectric:3.5.1'
+	testImplementation 'org.robolectric:shadows-support-v4:3.0'
 	testCompile 'org.mockito:mockito-core:2.8.9'
 }
 
