--- a/bramble-api/build.gradle
+++ b/bramble-api/build.gradle
@@ -1,19 +1,19 @@
-apply plugin: 'java'
+apply plugin: 'java-library'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 apply plugin: 'witness'
 
 dependencies {
-	compile "com.google.dagger:dagger:2.0.2"
-	compile 'com.google.code.findbugs:jsr305:3.0.2'
+	implementation "com.google.dagger:dagger:2.0.2"
+	implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
-	testCompile 'junit:junit:4.12'
-	testCompile "org.jmock:jmock:2.8.2"
-	testCompile "org.jmock:jmock-junit4:2.8.2"
-	testCompile "org.jmock:jmock-legacy:2.8.2"
-	testCompile "org.hamcrest:hamcrest-library:1.3"
-	testCompile "org.hamcrest:hamcrest-core:1.3"
+	testImplementation 'junit:junit:4.12'
+	testImplementation "org.jmock:jmock:2.8.2"
+	testImplementation "org.jmock:jmock-junit4:2.8.2"
+	testImplementation "org.jmock:jmock-legacy:2.8.2"
+	testImplementation "org.hamcrest:hamcrest-library:1.3"
+	testImplementation "org.hamcrest:hamcrest-core:1.3"
 }
 
 dependencyVerification {
