--- a/bramble-core/build.gradle
+++ b/bramble-core/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'java'
+apply plugin: 'java-library'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
@@ -7,14 +7,20 @@ apply plugin: 'idea'
 apply plugin: 'witness'
 
 dependencies {
-	compile project(path: ':bramble-api', configuration: 'default')
-	compile 'com.madgag.spongycastle:core:1.58.0.0'
-	compile 'com.h2database:h2:1.4.192' // This is the last version that supports Java 1.6
-	compile 'org.bitlet:weupnp:0.1.4'
+	implementation project(path: ':bramble-api', configuration: 'default')
+	implementation 'com.madgag.spongycastle:core:1.58.0.0'
+	implementation 'com.h2database:h2:1.4.192' // This is the last version that supports Java 1.6
+	implementation 'org.bitlet:weupnp:0.1.4'
 
 	apt 'com.google.dagger:dagger-compiler:2.0.2'
 
-	testCompile project(path: ':bramble-api', configuration: 'testOutput')
+	testImplementation project(path: ':bramble-api', configuration: 'testOutput')
+	testImplementation 'junit:junit:4.12'
+	testImplementation "org.jmock:jmock:2.8.2"
+	testImplementation "org.jmock:jmock-junit4:2.8.2"
+	testImplementation "org.jmock:jmock-legacy:2.8.2"
+	testImplementation "org.hamcrest:hamcrest-library:1.3"
+	testImplementation "org.hamcrest:hamcrest-core:1.3"
 
 	testApt 'com.google.dagger:dagger-compiler:2.0.2'
 }
