--- a/bramble-j2se/build.gradle
+++ b/bramble-j2se/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'java'
+apply plugin: 'java-library'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
@@ -7,14 +7,21 @@ apply plugin: 'idea'
 apply plugin: 'witness'
 
 dependencies {
-	compile project(path: ':bramble-core', configuration: 'default')
-	compile fileTree(dir: 'libs', include: '*.jar')
-	compile 'net.java.dev.jna:jna:4.4.0'
-	compile 'net.java.dev.jna:jna-platform:4.4.0'
+	implementation project(path: ':bramble-core', configuration: 'default')
+	implementation fileTree(dir: 'libs', include: '*.jar')
+	implementation 'net.java.dev.jna:jna:4.4.0'
+	implementation 'net.java.dev.jna:jna-platform:4.4.0'
 
 	apt 'com.google.dagger:dagger-compiler:2.0.2'
 
-	testCompile project(path: ':bramble-core', configuration: 'testOutput')
+	testImplementation project(path: ':bramble-api', configuration: 'testOutput')
+	testImplementation project(path: ':bramble-core', configuration: 'testOutput')
+	testImplementation 'junit:junit:4.12'
+	testImplementation "org.jmock:jmock:2.8.2"
+	testImplementation "org.jmock:jmock-junit4:2.8.2"
+	testImplementation "org.jmock:jmock-legacy:2.8.2"
+	testImplementation "org.hamcrest:hamcrest-library:1.3"
+	testImplementation "org.hamcrest:hamcrest-core:1.3"
 }
 
 dependencyVerification {
