--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -38,10 +38,17 @@ dependencies {
 
 	compileOnly 'javax.annotation:jsr250-api:1.0'
 
+	testImplementation project(path: ':bramble-api', configuration: 'testOutput')
 	testImplementation project(path: ':bramble-core', configuration: 'testOutput')
 	testImplementation 'org.robolectric:robolectric:3.5.1'
 	testImplementation 'org.robolectric:shadows-support-v4:3.0'
 	testCompile 'org.mockito:mockito-core:2.8.9'
+	testImplementation 'junit:junit:4.12'
+	testImplementation "org.jmock:jmock:2.8.2"
+	testImplementation "org.jmock:jmock-junit4:2.8.2"
+	testImplementation "org.jmock:jmock-legacy:2.8.2"
+	testImplementation "org.hamcrest:hamcrest-library:1.3"
+	testImplementation "org.hamcrest:hamcrest-core:1.3"
 }
 
 dependencyVerification {
