--- a/briar-core/build.gradle
+++ b/briar-core/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'java'
+apply plugin: 'java-library'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
@@ -7,18 +7,24 @@ apply plugin: 'idea'
 apply plugin: 'witness'
 
 dependencies {
-	compile project(path: ':briar-api', configuration: 'default')
-	compile 'com.rometools:rome:1.7.3'
-	compile 'org.jdom:jdom2:2.0.6'
-	compile 'com.squareup.okhttp3:okhttp:3.8.0'
-	compile 'org.jsoup:jsoup:1.10.3'
+	implementation project(path: ':briar-api', configuration: 'default')
+	implementation 'com.rometools:rome:1.7.3'
+	implementation 'org.jdom:jdom2:2.0.6'
+	implementation 'com.squareup.okhttp3:okhttp:3.8.0'
+	implementation 'org.jsoup:jsoup:1.10.3'
 
 	apt 'com.google.dagger:dagger-compiler:2.0.2'
 
-	testCompile project(path: ':bramble-core', configuration: 'default')
-	testCompile project(path: ':bramble-core', configuration: 'testOutput')
-	testCompile project(path: ':bramble-api', configuration: 'testOutput')
-	testCompile 'net.jodah:concurrentunit:0.4.2'
+	testImplementation project(path: ':bramble-core', configuration: 'default')
+	testImplementation project(path: ':bramble-core', configuration: 'testOutput')
+	testImplementation project(path: ':bramble-api', configuration: 'testOutput')
+	testImplementation 'net.jodah:concurrentunit:0.4.2'
+	testImplementation 'junit:junit:4.12'
+	testImplementation "org.jmock:jmock:2.8.2"
+	testImplementation "org.jmock:jmock-junit4:2.8.2"
+	testImplementation "org.jmock:jmock-legacy:2.8.2"
+	testImplementation "org.hamcrest:hamcrest-library:1.3"
+	testImplementation "org.hamcrest:hamcrest-core:1.3"
 
 	testApt 'com.google.dagger:dagger-compiler:2.0.2'
 }
