--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,8 @@ cache:
 before_script:
   - set -e
   - export GRADLE_USER_HOME=$PWD/.gradle
+  # Accept the license for the Android build tools
+  - echo y | /opt/android-sdk/tools/bin/sdkmanager "build-tools;26.0.2"
   # Install the Android support repository
   # TODO: Remove this when we upgrade the support library
   - echo y | /opt/android-sdk/tools/bin/sdkmanager 'extras;android;m2repository'
