--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -186,18 +186,18 @@ android {
 	defaultConfig {
 		minSdkVersion 14
 		targetSdkVersion 26
-		versionCode 1612
-		versionName "0.16.12"
-		applicationId "org.briarproject.briar.beta"
-		resValue "string", "app_package", "org.briarproject.briar.beta"
-		resValue "string", "app_name", "Briar Beta"
+		versionCode 1700
+		versionName "0.17.0"
+		applicationId "org.briarproject.briar.android"
+		resValue "string", "app_package", "org.briarproject.briar.android"
+		resValue "string", "app_name", "Briar"
 		buildConfigField "String", "GitHash", "\"${getGitHash()}\""
 	}
 
 	buildTypes {
 		debug {
 			applicationIdSuffix ".debug"
-			resValue "string", "app_package", "org.briarproject.briar.beta.debug"
+			resValue "string", "app_package", "org.briarproject.briar.android.debug"
 			resValue "string", "app_name", "Briar Debug"
 			shrinkResources false
 			minifyEnabled true
